# LR6

GTests/: GTests1.cpp  GTests2.cpp  GTests3.cpp
Task_n1/: CMakeLists.txt  Task_1  Task_1.cpp
Task_n2/: CMakeLists.txt  Task_2  Task_2.cpp
Task_n3/: CMakeLists.txt  Task_3  Task_3.cpp
